--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 
 # production
 /build
+/dist
+/storybook-build
+/es
 
 # misc
 .DS_Store
@@ -17,6 +20,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.idea
+.vscode
 
 npm-debug.log*
 yarn-debug.log*
