--- a/package.json
+++ b/package.json
@@ -1,43 +1,133 @@
 {
-  "name": "modal-window-test",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+    "name": "modal-window-package",
+    "version": "0.0.1",
+    "description": "modal UI component",
+    "author": "Herman Semykozov",
+    "main": "dist/main.js",
+    "module": "dist/main.es.js",
+    "moduleMin": "dist/main.min.js",
+    "types": "dist/main.d.ts",
+    "files": [
+        "dist",
+        "es",
+        "README.md",
+        "src"
     ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "husky": {
+        "hooks": {
+            "pre-push": "yarn lint"
+        }
+    },
+    "dependencies": {
+        "@babel/runtime": "^7.9.2",
+        "@svgr/cli": "^5.4.0",
+        "@types/body-scroll-lock": "^2.6.1",
+        "@types/react-responsive": "^8.0.2",
+        "body-scroll-lock": "^3.1.5",
+        "bootstrap": "^4.6.0",
+        "classnames": "^2.2.6"
+    },
+    "peerDependencies": {
+        "react": "16.13.1",
+        "react-dom": "16.13.1"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.8.4",
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
+        "@babel/plugin-proposal-optional-chaining": "^7.9.0",
+        "@babel/plugin-transform-runtime": "^7.9.0",
+        "@babel/preset-env": "^7.9.5",
+        "@babel/preset-react": "^7.9.4",
+        "@babel/preset-typescript": "^7.9.0",
+        "@rollup/plugin-node-resolve": "^7.1.3",
+        "@storybook/addon-actions": "^6.0.21",
+        "@storybook/addon-controls": "^6.0.21",
+        "@storybook/addon-docs": "^6.0.21",
+        "@storybook/addon-notes": "^5.3.21",
+        "@storybook/addon-storysource": "^6.0.21",
+        "@storybook/addon-viewport": "^6.0.21",
+        "@storybook/react": "^6.0.21",
+        "@storybook/source-loader": "^6.0.21",
+        "@testing-library/jest-dom": "^4.2.4",
+        "@testing-library/react": "^9.3.2",
+        "@testing-library/user-event": "^7.1.2",
+        "@types/classnames": "2.2.10",
+        "@types/jest": "^24.0.0",
+        "@types/react": "^16.9.0",
+        "@types/react-dom": "^16.9.0",
+        "@types/reactstrap": "8.4.2",
+        "@typescript-eslint/eslint-plugin": "^2.29.0",
+        "@typescript-eslint/parser": "^2.29.0",
+        "autoprefixer": "^9.7.6",
+        "awesome-typescript-loader": "^5.2.1",
+        "babel-loader": "^8.1.0",
+        "css-loader": "^3.5.2",
+        "eslint": "^6.8.0",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-plugin-functional": "^3.0.1",
+        "eslint-plugin-import": "^2.20.2",
+        "eslint-plugin-prettier": "^3.1.2",
+        "eslint-plugin-react": "^7.19.0",
+        "eslint-plugin-react-hooks": "^3.0.0",
+        "husky": "^4.2.5",
+        "jest": "^25.5.2",
+        "node-sass": "^4.13.1",
+        "postcss-object-fit-images": "^1.1.2",
+        "prettier": "^1.19.1",
+        "react-docgen-typescript-loader": "^3.7.2",
+        "react-docgen-typescript-webpack-plugin": "^1.1.0",
+        "reactstrap": "8.4.1",
+        "rollup": "^2.6.1",
+        "rollup-plugin-analyzer": "^3.2.2",
+        "rollup-plugin-auto-external": "^2.0.0",
+        "rollup-plugin-babel": "^4.4.0",
+        "rollup-plugin-bundle-size": "^1.0.3",
+        "rollup-plugin-commonjs": "^10.1.0",
+        "rollup-plugin-peer-deps-external": "^2.2.2",
+        "rollup-plugin-postcss": "^2.8.2",
+        "rollup-plugin-terser": "^5.3.0",
+        "rollup-plugin-ts-paths": "^1.0.5",
+        "rollup-plugin-typescript2": "^0.27.0",
+        "sass-loader": "^8.0.2",
+        "sass-resources-loader": "^2.0.3",
+        "style-loader": "^1.1.4",
+        "stylelint": "^13.2.1",
+        "stylelint-config-standard": "^20.0.0",
+        "stylelint-prettier": "^1.1.2",
+        "stylelint-scss": "^3.15.0",
+        "ts-jest": "^25.4.0",
+        "tsconfig-paths-webpack-plugin": "^3.2.0",
+        "ttypescript": "1.5.10",
+        "typescript": "^3.8.3",
+        "typescript-transform-paths": "1.1.14",
+        "webpack": "^4.43.0",
+        "webpack-cli": "^3.3.11"
+    },
+    "scripts": {
+        "start": "yarn rollup -c -w",
+        "build": "NODE_ENV=production yarn rollup -c && yarn build:es",
+        "build:analyze": "NODE_ENV=analyze yarn rollup -c",
+        "lint": "yarn lint:ts && yarn lint:scss",
+        "lint:ts": "eslint './src/**/*.{ts,tsx}'",
+        "lint:scss": "stylelint './src/**/*.scss'",
+        "lint:fix": "prettier --write './src/**/*.{ts,tsx,scss}'",
+        "build:es": "NODE_ENV=production yarn tsc -p tsconfig-icons.json",
+        "build:icons": "yarn build:monochrome-icons && yarn build:es",
+        "build:monochrome-icons": "svgr --typescript src/assets/icons/monochrome -d ./src/components/Icons --template ./svgr-template",
+        "storybook": "start-storybook -p 9001 -c .storybook",
+        "build-storybook": "build-storybook -c .storybook -o storybook-build -s ./public",
+        "test": "NODE_ENV=test jest ./src"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
