--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,35 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
-  },
-  "include": [
-    "src"
-  ]
+    "compilerOptions": {
+        "target": "es5",
+        "lib": ["dom", "dom.iterable", "esnext"],
+        "skipLibCheck": true,
+        "module": "esnext",
+        "moduleResolution": "node",
+        "allowSyntheticDefaultImports": true,
+        "esModuleInterop": true,
+        "strict": true,
+        "allowJs": true,
+        "resolveJsonModule": true,
+        "sourceMap": true,
+        "declaration": true,
+        "removeComments": true,
+        "noImplicitAny": true,
+        "strictNullChecks": true,
+        "jsx": "react",
+        "baseUrl": "src",
+        "outDir": "dist",
+        "plugins": [{ "transform": "typescript-transform-paths", "afterDeclarations": true }],
+        "paths": {
+            "@/*": ["*"],
+            "@components/*": ["components/*"],
+            "@services/*": ["services/*"],
+            "@assets/*": ["assets/*"],
+            "@helpers/*": ["helpers/*"],
+            "@hooks/*": ["hooks/*"],
+            "@type/*": ["types/*"]
+        }
+    },
+    "exclude": ["node_modules", "dist"],
+    "include": ["src"],
+    "esModuleInterop": true
 }
