--- a/.eslintrc
+++ b/.eslintrc
@@ -68,7 +68,7 @@
         "no-nested-ternary": "error",
         "arrow-body-style": ["error", "as-needed"],
         "@typescript-eslint/no-non-null-assertion": 0,
-        "@typescript-eslint/no-explicit-any": "error",
+//        "@typescript-eslint/no-explicit-any": "error",
         "react/jsx-boolean-value": [2, "always"]
     },
     "settings": {
