--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "modal-window-package",
+    "name": "@react-frontend-solutions/modal-window-package",
     "version": "0.0.1",
     "description": "modal UI component",
     "author": "Herman Semykozov",
@@ -82,6 +82,7 @@
         "react-docgen-typescript-loader": "^3.7.2",
         "react-docgen-typescript-webpack-plugin": "^1.1.0",
         "reactstrap": "8.4.1",
+        "release-it": "^14.6.1",
         "rollup": "^2.6.1",
         "rollup-plugin-analyzer": "^3.2.2",
         "rollup-plugin-auto-external": "^2.0.0",
@@ -121,7 +122,8 @@
         "build:monochrome-icons": "svgr --typescript src/assets/icons/monochrome -d ./src/components/Icons --template ./svgr-template",
         "storybook": "start-storybook -p 9001 -c .storybook",
         "build-storybook": "build-storybook -c .storybook -o storybook-build -s ./public",
-        "test": "NODE_ENV=test jest ./src"
+        "test": "NODE_ENV=test jest ./src",
+        "release": "release-it"
     },
     "browserslist": {
         "production": [
@@ -138,6 +140,14 @@
     "storybook": {
         "title": "Modal UI component",
         "url": "https://will-be-placed-somewhere-on-remote-server.com"
+    },
+    "publishConfig": {
+        "access": "public"
+    },
+    "release-it": {
+        "github": {
+            "release": true
+        }
     },
     "license": "MIT"
 }
