--- a/package.json
+++ b/package.json
@@ -123,7 +123,7 @@
         "storybook": "start-storybook -p 9001 -c .storybook",
         "build-storybook": "build-storybook -c .storybook -o storybook-build -s ./public",
         "test": "NODE_ENV=test jest ./src",
-        "release": "release-it"
+        "release": "release-it --npm.skipChecks --no-requireCleanWorkingDir"
     },
     "browserslist": {
         "production": [
