--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "awesome-typescript-loader": "^5.2.1",
         "babel-loader": "^8.1.0",
         "css-loader": "^3.5.2",
+        "dotenv-cli": "^4.0.0",
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-plugin-functional": "^3.0.1",
@@ -123,7 +124,7 @@
         "storybook": "start-storybook -p 9001 -c .storybook",
         "build-storybook": "build-storybook -c .storybook -o storybook-build -s ./public",
         "test": "NODE_ENV=test jest ./src",
-        "release": "release-it --npm.skipChecks --no-requireCleanWorkingDir"
+        "release": "dotenv release-it"
     },
     "browserslist": {
         "production": [
@@ -142,7 +143,8 @@
         "url": "https://will-be-placed-somewhere-on-remote-server.com"
     },
     "publishConfig": {
-        "access": "public"
+        "access": "public",
+        "registry": "https://registry.npmjs.org/"
     },
     "release-it": {
         "github": {
