--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "@babel/preset-env": "^7.9.5",
         "@babel/preset-react": "^7.9.4",
         "@babel/preset-typescript": "^7.9.0",
+        "@release-it/conventional-changelog": "^2.0.1",
         "@rollup/plugin-node-resolve": "^7.1.3",
         "@storybook/addon-actions": "^6.0.21",
         "@storybook/addon-controls": "^6.0.21",
@@ -149,6 +150,12 @@
     "release-it": {
         "github": {
             "release": true
+        },
+        "plugins": {
+            "@release-it/conventional-changelog": {
+                "preset": "angular",
+                "infile": "CHANGELOG.md"
+            }
         }
     },
     "license": "MIT"
